penambahan login page yang formnya di kanan

--- a/views/Mahasiswa/footMhs.ejs
+++ b/views/Mahasiswa/footMhs.ejs
@@ -53,6 +53,6 @@
     <!-- End Grid -->
   </footer>
 
-<script src="./node_modules/preline/dist/preline.js"></script>
+  <script src="preline.js"></script>
 </body>
 </html>
