--- a/views/Mahasiswa/headMhs.ejs
+++ b/views/Mahasiswa/headMhs.ejs
@@ -9,12 +9,12 @@
 <body>
     
   <!-- ========== HEADER ========== -->
-<header class="flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full py-7">
+<header class="fixed top-0 left-0 right-0 flex flex-wrap md:justify-start md:flex-nowrap z-10 w-full py-4 bg-white">
     <nav class="relative max-w-7xl w-full flex flex-wrap md:grid md:grid-cols-12 basis-full items-center px-4 md:px-6 md:px-8 mx-auto" aria-label="Global">
       <div class="md:col-span-3">
         <!-- Logo -->
         <a class="flex-none inline-block font-semibold focus:outline-black" href="">
-            <img src="/fti.png" alt="">
+            <img class="w-52 md:w-48 lg:w-64" src="/fti.png" alt="">
         </a>
         <!-- End Logo -->
       </div>
