--- a/views/Mahasiswa/login.ejs
+++ b/views/Mahasiswa/login.ejs
@@ -6,21 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-<!-- <body style="background-image:url(RektoratView2.jpg); background-size: cover;"> -->
-<body>
+<body style="background-image:url(RektoratView2.jpg); background-size: cover;">
+<!-- <body> -->
 
-  <!-- Features -->
-<div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-1 mx-auto">
-  <!-- Grid -->
-  <div class="md:grid md:grid-cols-2 md:items-center md:gap-12 xl:gap-32">
-    <div>
-      <img class="rounded-xl" src="https://images.unsplash.com/photo-1648737963503-1a26da876aca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=900&h=900&q=80" alt="Image Description">
-    </div>
-    <!-- End Col -->
-
-    <div class="mt-5 sm:mt-10 lg:mt-0">
-      <div class="space-y-6 sm:space-y-8">
-        <main id="content" class="w-full max-w-md mr-10 p-6 pt-0 float-end">
+      <main id="content" class="w-full max-w-md mx-auto p-6 pt-0">
 
           <div class="mt-7 bg-white border border-gray-200 rounded-xl shadow-sm">
             <div class="p-4 sm:p-7">
@@ -95,13 +84,7 @@
               </div>
             </div>
           </div>
-        </main>
-      </div>
-    </div>
-    <!-- End Col -->
-  </div>
-  <!-- End Grid -->
-</div>
+        </main>   
 <!-- End Features -->
 
   
