--- a/assets/style.css
+++ b/assets/style.css
@@ -859,8 +859,17 @@ video {
   height: 100%;
 }
 
+.size-9 {
+  width: 2.25rem;
+  height: 2.25rem;
+}
+
 .h-auto {
   height: auto;
+}
+
+.min-h-\[75rem\] {
+  min-height: 75rem;
 }
 
 .w-2\/3 {
@@ -1958,6 +1967,10 @@ video {
 
   .sm\:inline-flex {
     display: inline-flex;
+  }
+
+  .sm\:hidden {
+    display: none;
   }
 
   .sm\:w-48 {
