--- a/views/Dashboard/dashboard.ejs
+++ b/views/Dashboard/dashboard.ejs
@@ -47,9 +47,7 @@
   hidden
   fixed inset-y-0 start-0 z-[60]
   bg-abu border-e border-abu
-  lg:block lg:translate-x-0 lg:end-auto lg:bottom-0
- 
- ">
+  lg:block lg:translate-x-0 lg:end-auto lg:bottom-0">
   <div class="mx-auto pt-5">
     <!-- Logo -->
     <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="../templates/admin/index.html" aria-label="Preline">
@@ -90,6 +88,13 @@
         <svg class="flex-shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="18" height="18" x="3" y="4" rx="2" ry="2"/><line x1="16" x2="16" y1="2" y2="6"/><line x1="8" x2="8" y1="2" y2="6"/><line x1="3" x2="21" y1="10" y2="10"/><path d="M8 14h.01"/><path d="M12 14h.01"/><path d="M16 14h.01"/><path d="M8 18h.01"/><path d="M12 18h.01"/><path d="M16 18h.01"/></svg>
         Calendar
       </a></li>
+      <li>
+        <form action="/auth/logout" method="post">
+        <button type="submit" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-xl border border-gray-200 text-black hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none">
+          Keluar
+        </button>
+      </form>
+    </li>
     </ul>
   </nav>
 </div>
@@ -233,7 +238,7 @@
 <!-- End Content -->
 <!-- ========== END MAIN CONTENT ========== -->
 
-<script src="preline.js"></script>
+<link rel="stylesheet" href="/style.css">
 <!-- <script src="https://cdn.jsdelivr.net/npm/preline/dist/preline.js"></script> -->
 </body>
 </html>
