--- a/views/Dashboard/dashboard.ejs
+++ b/views/Dashboard/dashboard.ejs
@@ -90,9 +90,10 @@
       </a></li>
       <li>
         <form action="/auth/logout" method="post">
-        <button type="submit" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-xl border border-gray-200 text-black hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none">
-          Keluar
-        </button>
+          <button type="submit" class="py-2 px-2 ml-2 mt-2 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-red-600 text-white hover:bg-red-800 disabled:opacity-50 disabled:pointer-events-none">
+            Keluar
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
+          </button>
       </form>
     </li>
     </ul>
@@ -240,7 +241,6 @@
 <!-- End Content -->
 <!-- ========== END MAIN CONTENT ========== -->
 
- 
 <!-- <script src="https://cdn.jsdelivr.net/npm/preline/dist/preline.js"></script> -->
 <script src="/preline.js"></script>
 </body>
