sudah bisa menampilkan data tabel yang berelasi

--- a/views/Mahasiswa/riwayat.ejs
+++ b/views/Mahasiswa/riwayat.ejs
@@ -91,7 +91,7 @@
                 <td class="size-px whitespace-nowrap">
                     <button type="button" class="block" data-hs-overlay="#hs-ai-invoice-modal">
                     <span class="block px-6 py-2">
-                        <span class="font-mono text-sm text-blue-600"><%=mahasiswa.tanggal_pendaftaran%></span>
+                        <span class="font-mono text-sm text-blue-600"><%=mahasiswa.pendaftaran.ujian.nama_matkul%></span>
                     </span>
                     </button>
                 </td>
