pengubahan icon notif dan perbaian tombol tambah mata kuliah

--- a/views/Dashboard/tambah-matkul.ejs
+++ b/views/Dashboard/tambah-matkul.ejs
@@ -17,7 +17,7 @@
       <textarea class="w-full border border-gray-300 rounded px-2 py-1" id="deskripsi" name="deskripsi"></textarea>
     </div>
 
-    <button type="button" class="w-10 py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700 disabled:opacity-50 disabled:pointer-events-none">
+    <button type="button" class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700 disabled:opacity-50 disabled:pointer-events-none">
       Daftar Mata Kuliah
     </button>
   </div>
@@ -35,10 +35,9 @@
       <label class="block font-bold mb-1" for="file">Upload File</label>
       <div class="flex items-center">
         <input class="border border-gray-300 rounded px-2 py-1" type="file" id="file" name="file">
-        <span class="ml-2 text-primary">&#9758;</span>
       </div>
     </div>
-    <button type="button" class="w-10 py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700 disabled:opacity-50 disabled:pointer-events-none">
+    <button type="button" class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700 disabled:opacity-50 disabled:pointer-events-none">
       Simpan
     </button>
   </div>
