--- a/views/Mahasiswa/riwayat.ejs
+++ b/views/Mahasiswa/riwayat.ejs
@@ -15,11 +15,8 @@
             <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200">
             <div>
                 <h2 class="text-xl font-semibold text-gray-800">
-                Invoices
+                Riwayat Ujian <span class="text-green-600"><%=mahasiswa.nama %></span>
                 </h2>
-                <p class="text-sm text-gray-600">
-                Create invoices, edit, download and more.
-                </p>
             </div>
 
             <div>
@@ -156,26 +153,8 @@
             <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200">
             <div>
                 <p class="text-sm text-gray-600">
-                <span class="font-semibold text-gray-800">9</span> results
+                <span class="font-semibold text-gray-800"></span> results
                 </p>
-            </div>
-
-            <div>
-                <div class="inline-flex gap-x-2">
-                <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none">
-                    <svg class="size-3" width="16" height="16" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10.506 1.64001L4.85953 7.28646C4.66427 7.48172 4.66427 7.79831 4.85953 7.99357L10.506 13.64" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                    </svg>
-                    Prev
-                </button>
-
-                <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none">
-                    Next
-                    <svg class="size-3" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M4.50598 2L10.1524 7.64645C10.3477 7.84171 10.3477 8.15829 10.1524 8.35355L4.50598 14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                    </svg>
-                </button>
-                </div>
             </div>
             </div>
             <!-- End Footer -->
@@ -225,7 +204,7 @@
         <div class="p-4 sm:p-7 overflow-y-auto">
         <div class="text-center">
             <h3 class="text-lg font-semibold text-gray-800">
-            Invoice from Preline
+            Riwayat Mata kuliah 
             </h3>
             <p class="text-sm text-gray-500">
             Invoice #3682303
