--- a/views/Dashboard/dashboard.ejs
+++ b/views/Dashboard/dashboard.ejs
@@ -1,73 +1,50 @@
 <%-include("headAdm.ejs")%>
-  <h1 class="text-2xl text-hijau font-bold md:text-4xl md:leading-tight pt-5 pb-12">Dashboard</h1>
-  <!-- Table -->
-  <div class="flex flex-col">
+<h1 class="text-2xl text-hijau font-bold md:text-4xl md:leading-tight pt-5 pb-12"><%= title %></h1>
+<!-- Table -->
+<div class="flex flex-col">
     <div class="-m-1.5 overflow-x-auto">
-      <div class="p-1.5 min-w-full inline-block align-middle">
-        <div class="border rounded-lg overflow-hidden">
-          <table class="min-w-full divide-y divide-gray-200">
-            <thead class="bg-gray-50">
-              <tr>
-                <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Name</th>
-                <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">User ID</th>
-                <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Tanggal Daftar</th>
-                <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">NIM</th>
-                <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase">Aksi</th>
-              </tr>
-            </thead>
-            <tbody class="divide-y divide-gray-200">
-              <tr>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">Ilham Nofaldi</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">12/09/2029</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2211522028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
-                  <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
-                </td>
-              </tr>
-              <tr>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">Ilham Nofaldi</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">12/09/2029</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2211522028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
-                  <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
-                </td>
-              </tr>
-              <tr>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">Ilham Nofaldi</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">12/09/2029</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2211522028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
-                  <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
-                </td>
-              </tr>
-              <tr>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">Ilham Nofaldi</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">12/09/2029</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2211522028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
-                  <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
-                </td>
-              </tr>
-              <tr>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">Ilham Nofaldi</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">12/09/2029</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">2211522028</td>
-                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
-                  <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="p-1.5 min-w-full inline-block align-middle">
+            <div class="border rounded-lg overflow-hidden">
+                <table class="min-w-full divide-y divide-gray-200">
+                    <thead class="bg-gray-50">
+                        <tr>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">ID Mata Kuliah</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Mata Kuliah</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Jadwal Remedial</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Deskripsi</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Materi Ujian</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Aksi</th>
+                        </tr>
+                    </thead>
+                    <tbody class="divide-y divide-gray-200">
+                        <% ujian.forEach(matkul => { %>
+                            <tr>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.id %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.nama_matkul %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%=new Date (matkul.jadwal).toLocaleString('en-GB', {
+                                    day: '2-digit',
+                                    month: 'short',
+                                    year: 'numeric',
+                                    hour: '2-digit',
+                                    minute: '2-digit',
+                                    hour12: false
+                                });%></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.deskripsi %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= matkul.materi_ujian %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
+                                    <form action="/admin/deletePendaftaran" method="POST" onsubmit="return confirm('Are you sure you want to delete this matkul?');">
+                                        <input type="hidden" name="id" value="<%= ujian.id %>">
+                                        <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
+                                    </form>                                </td>
+                            </tr>
+                        <% }) %>
+                    </tbody>
+                </table>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <!-- End Table -->
+</div>
+<!-- End Table -->
 </div>
 <!-- End Content -->
 <!-- ========== END MAIN CONTENT ========== -->
